favicon setup, and fix gallery warnings - wrap interactive elements

--- a/src/components/ProjectsGallery/projectsGallery.css
+++ b/src/components/ProjectsGallery/projectsGallery.css
@@ -2,21 +2,22 @@
 color:#876742;
 text-align:center;
 min-width:210px;
+display:flex;
+flex-direction: column;
 }
 #projectsArea h1{
 font-size:1em;
 }
-#projectsArea ul{
-list-style-type:none;
-margin:0px;
-padding:0px;
-}
-#projectsArea li{
+#projectsArea button{
 padding:3px;
+border:none;
+background-color: inherit;
+color:#876742;
+font: inherit;
 }
-#projectsArea li:hover{
+#projectsArea button:hover{
 text-decoration: underline;
-cursor:pointer;
+cursor: pointer;
 }
 
 .active{
@@ -31,6 +32,14 @@ cursor:pointer;
   align-content: flex-start;
   gap: 10px;
   margin-left:20px;
+}
+
+.thumbWrapper button{
+  border:none;
+  background-color:inherit;
+  padding:0;
+  margin:0;
+  cursor: pointer;
 }
 
 .thumb{
